--- a/esp8266.3.0.0/Wifi_BlinkTest/Makefile
+++ b/esp8266.3.0.0/Wifi_BlinkTest/Makefile
@@ -11,24 +11,24 @@ all:
 	$(MAKE) flash
 
 BlinkTest-0x00000.bin: BlinkTest
-	esptool.py elf2image $^
+	$(ESP_TOOL) elf2image $^
 
 BlinkTest: BlinkTest.o
 
 BlinkTest.o: BlinkTest.c
 
 flash: BlinkTest-0x00000.bin
-	esptool.py write_flash 0x0 BlinkTest-0x00000.bin 0x10000 BlinkTest-0x10000.bin
+	$(ESP_TOOL) write_flash 0x0 BlinkTest-0x00000.bin 0x10000 BlinkTest-0x10000.bin
 
 details: 
-	esptool.py image_info BlinkTest-0x00000.bin
-	esptool.py esp8266 image_info BlinkTest-0x10000.bin
+	$(ESP_TOOL) image_info BlinkTest-0x00000.bin
+	$(ESP_TOOL) esp8266 image_info BlinkTest-0x10000.bin
 
 clean:
 	rm -f BlinkTest BlinkTest.o BlinkTest-0x00000.bin BlinkTest-0x10000.bin
-	esptool.py erase_flash
+	$(ESP_TOOL) erase_flash
 	$(MAKE) flash-factory
 
 # Flash the factory Interupt and control binaries.
 flash-factory:
-	esptool.py write_flash 0xFC000 $(SDK)/bin/esp_init_data_default_v05.bin
+	$(ESP_TOOL) write_flash 0xFC000 $(SDK)/bin/esp_init_data_default_v05.bin
