starting to move the functions into their own files

--- a/esp8266.3.0.0/BlinkTest/Makefile
+++ b/esp8266.3.0.0/BlinkTest/Makefile
@@ -1,7 +1,7 @@
-SDK=/opt/esp8266-nonos-sdk
+SDK=/opt/esp8266-nonos-sdk.3.0.0
 CC = xtensa-lx106-elf-gcc
 CFLAGS = -I. -I$(SDK)/include -I$(SDK)/include/json -I$(SDK)/driver_lib/include/driver -I$(SDK)/driver_lib/driver -mlongcalls
-LDLIBS = -nostdlib -Wl,--start-group -lc -ldriver -lgcc -lcrypto -lhal -lphy -lpp -lnet80211 -llwip -lwpa -lwpa2 -lcrypto -lmain -ljson -lupgrade -lmbedtls -lwps -lsmartconfig -lairkiss -Wl,--end-group -lgcc
+LDLIBS = -nostdlib -Wl,--start-group -lc -ldriver -lgcc -lcrypto -lphy -lpp -lnet80211 -llwip -lwpa -lwpa2 -lcrypto -lmain -ljson -lupgrade -lmbedtls -lwps -lsmartconfig -lairkiss -Wl,--end-group -lgcc
 LDDIR = ../ld
 LDFLAGS = -T$(LDDIR)/eagle.app.v6.ld -L$(SDK)/lib -L$(SDK)/driver_lib/driver -L$(SDK)/driver_lib/include/driver
 
@@ -11,7 +11,7 @@ all:
 	$(MAKE) flash
 
 BlinkTest-0x00000.bin: BlinkTest
-	esptool.py --chip esp8266 elf2image $^
+	esptool.py elf2image $^
 
 BlinkTest: BlinkTest.o
 
@@ -19,15 +19,16 @@ BlinkTest.o: BlinkTest.c
 
 flash: BlinkTest-0x00000.bin
 	esptool.py write_flash 0x0 BlinkTest-0x00000.bin 0x10000 BlinkTest-0x10000.bin
-	#esptool.py write_flash 0x0 $(SDK)/bin/boot_v1.7.bin 0x10000 BlinkTest-0x00000.bin 0x81000 BlinkTest-0x10000.bin
-	#esptool.py write_flash -fm dio 0x0 $(SDK)/bin/boot_v1.7.bin 0x10000 BlinkTest-0x00000.bin
-	#esptool.py write_flash 0x0 $(SDK)/bin/boot_v1.2.bin 0x10000 BlinkTest-0x00000.bin 0x3e000 BlinkTest-0x10000.bin 0x7e000 $(SDK)/bin/blank.bin
-	#esptool.py write_flash 0x0 $(SDK)/bin/boot_v1.2.bin 0x10000 BlinkTest-0x00000.bin 0x81000 BlinkTest-0x10000.bin
 
 details: 
-	esptool.py --chip esp8266 image_info BlinkTest-0x00000.bin
-	esptool.py --chip esp8266 image_info BlinkTest-0x10000.bin
+	esptool.py image_info BlinkTest-0x00000.bin
+	esptool.py esp8266 image_info BlinkTest-0x10000.bin
 
 clean:
 	rm -f BlinkTest BlinkTest.o BlinkTest-0x00000.bin BlinkTest-0x10000.bin
 	esptool.py erase_flash
+	$(MAKE) flash-factory
+
+# Flash the factory Interupt and control binaries.
+flash-factory:
+	esptool.py write_flash 0xFC000 $(SDK)/bin/esp_init_data_default_v05.bin
