--- a/esp8266/esp_irc_bot/Makefile
+++ b/esp8266/esp_irc_bot/Makefile
@@ -1,4 +1,4 @@
-SDK=/opt/esp8266-nonos-sdk.3.0.0
+SDK=/opt/esp8266-nonos-sdk
 CC = xtensa-lx106-elf-gcc
 CFLAGS = -I. -I$(SDK)/include -I$(SDK)/include/json -I$(SDK)/driver_lib/include/driver -I$(SDK)/driver_lib/driver -mlongcalls
 LDLIBS = -nostdlib -Wl,--start-group -lc -ldriver -lgcc -lcrypto -lphy -lpp -lnet80211 -llwip -lwpa -lwpa2 -lcrypto -lmain -ljson -lupgrade -lmbedtls -lwps -lsmartconfig -lairkiss -Wl,--end-group -lgcc
